# Testing

./: .gitignore
2018_base/: run_Model.bat  run_ModelSteps.bat
source/scripts/batch/: Aux_AutoPaxIXXI.bat  Aux_Trips.bat  Average_Link_Speeds.bat  DP_TS_AM_Cube25.BAT  DP_TS_AM_Cube6.BAT  DP_TS_MD_Cube25.BAT  DP_TS_MD_Cube6.BAT  DP_TS_PM_Cube25.BAT  DP_TS_PM_Cube6.BAT  Highway_Assignment_Parallel_Cube25.bat  Highway_Assignment_Parallel_Cube6.bat  Highway_Assignment_Prep.bat  Highway_Skims.bat  PP_Highway_Build.BAT  PP_Highway_Skims.bat  Pre_Toll_Setting.bat  RunABM.bat  Summarize_Person_Trips_from_ActivitySim.bat  Toll_Setting.bat  Transit_Assignment_LineHaul_Parallel_PT.bat  Transit_Assignment_Parallel_PT.bat  Transit_Fare_PT.bat  Transit_Skim_All_Modes_Parallel_PT.bat  Transit_Skim_LineHaul_Parallel_PT.bat  Transit_Skim_TOD_Parallel_PT.bat  check_free_space.bat  create_outputs_folders.bat  move_temp_files_gen3.bat  set_CPI.bat  shutdown_60s.bat  skm_to_omx.bat  view_from_space_gen3.bat
source/scripts/cube/: Adjust_Runtime_PT.s  AreaType_File.s  Average_Link_Speeds.s  Combine_Int_Ext_Tables_For_TrAssign_Parallel.s  Convert_Ext_Vis_Transit_Tables_to_TRP.s  Convert_trip_tables_omx_to_trp.s  Highway_Assignment_Parallel_Cube6.s  (+40 more)
source/software/gen3_model_uv/: gen3_model151_installation.bat  pyproject.toml
source/visualizer/: generateDashboard.bat
support/: Toll_Minutes.TXT  True_Shape_2050Links_Viz2050.sbn  True_Shape_2050Links_Viz2050.sbx  True_Shape_2050Links_Viz2050.shx  Ver23_f_factors.dbf  equiv_toll_min_by_inc.s  hwy_assign_capSpeedLookup.s  ixxitod_2018HTS.dbf
(+24 files in other folders)
